--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,10 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     // Use the Sceneform UX Package pre-built from Maven.
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.11.0"
+    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.13.0"
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Use the Sceneform UX Package built from the source files included in the sceneformux folder.
     //api project(":sceneformux")
