--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
   <!-- This tag indicates that this application requires ARCore.  This results in the application
        only being visible in the Google Play Store on devices that support ARCore. -->
   <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
+<!--  <uses-feature android:name="android.hardware.camera2" android:required="true" />-->
 
   <application
       android:allowBackup="false"
@@ -39,7 +40,7 @@
         android:configChanges="orientation|screenSize"
         android:exported="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
-        android:screenOrientation="landscape">
+        android:screenOrientation="portrait">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
